tests/fixtures/invalid/pow_str_bytes_str.py
# Cannot call pow() with Str, Bytes, Str
x = pow("hello", b"hello", "hello")
